k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: resume-builder
  namespace: resume-builder
spec:
  type: ClusterIP
  selector:
    app: resume-builder
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
